--- a/templates/index.html
+++ b/templates/index.html
@@ -4,34 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google Font Icons -->
     <link rel="stylesheet" href="/static/styles.css" />
-    <title>Final - Google Clone</title>
+    <title>Anon Google Search</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
 </head>
 
 <body>
     <div class="header">
-      
+
         <div class="header__right">
             <a href="">Search preferences</a>
         </div>
-      </div>
+    </div>
     <div class="mainBody">
-        <img src="/static/images/logo.png"
-            alt="Logo" />
+        <img src="/static/images/logo.png" alt="Logo" />
         <div class="search">
             <div class="search__input">
                 <span class="material-icons"> search </span>
-                <input type="text" />
+                <form action="/search">
+                    <input type="text" name="query" class="search_inp"/>
+                </form>
             </div>
-
             <div class="search__buttons">
                 <button><i class="fa-solid fa-circle-info"></i> About Annon Google</button>
                 <button><i class="fa-brands fa-github"></i> Our GitHub</button>
             </div>
         </div>
 </body>
-
 </html>
