Parse link title

--- a/templates/results_page.html
+++ b/templates/results_page.html
@@ -37,8 +37,8 @@
         <p id="searchresultsnumber">About {{res_count}} results  </p>
         {% for link in links %}
             <div class="searchresult">
-                <h2>Lock (computer science) - Wikipedia</h2>
-                <a href="{{link}}" target="_blank">{{link}}</a> <button>▼</button>
+                <h2 onclick="window.location.href='{{link[0]}}'" style="cursor: pointer;">{{link[1]}}</h2>
+                <a href="{{link[0]}}" target="_blank">{{link[0]}}</a> <button>▼</button>
                 <p>In computer science, a lock or mutex (from mutual exclusion) is a synchronization mechanism for enforcing
                     limits on access to a resource in an</p>
                 <p> environment where there are many threads of execution.</p>
